--- a/code/app/templates/main/userlist.html
+++ b/code/app/templates/main/userlist.html
@@ -1,5 +1,7 @@
 {% extends "coreui/coreui-base.html" %}
 
+{% import "macro/pagination.html" as pagination %}
+
 
 {% block title %}贵州移动自主研发框架-pyfw{% endblock title %}
 
@@ -162,109 +164,93 @@
                   <br>
 
 
-                   <div >
-                   <table class="table table-responsive-sm table-striped">
+                   <div id="grid">
+{#                   <table class="table table-responsive-sm table-striped">#}
+{##}
+{#                      <thead class="">#}
+{#                        <tr>#}
+{#                          <th class="text-center">#}
+{#                            <i class="icon-people"></i>#}
+{#                          </th>#}
+{#                          <th>用户名</th>#}
+{#                          <th class="text-center">性别</th>#}
+{#                          <th>资料完善度</th>#}
+{#                          <th>邮箱</th>#}
+{#                          <th>编号</th>#}
+{#                          <th class="text-center">方式</th>#}
+{#                          <th>活跃</th>#}
+{#                          <th>操作</th>#}
+{#                        </tr>#}
+{#                      </thead>#}
+{#                      <tbody >#}
+{#                        {% for user in userlist %}#}
+{#                        <tr>#}
+{#                          <td class="text-center">#}
+{#                            <div class="avatar">#}
+{#                              <img class="img-avatar" src="{{ url_for('static', filename=user.icon) }}" alt="admin@bootstrapmaster.com">#}
+{#                              <span class="avatar-status badge-success"></span>#}
+{#                            </div>#}
+{#                          </td>#}
+{#                          <td>#}
+{#                            <div>{{ user.user_name }}</div>#}
+{#                            <div class="small text-muted">#}
+{#                              <span>{{ user.login_account  }}</span> | 注册时间:#}
+{##}
+{#                                {{ user.operate_time  }}</div>#}
+{#                          </td>#}
+{#                          <td class="text-center">#}
+{##}
+{#                              {% if user.user_gender and user.user_gender == 1  %}#}
+{#                                <i class="icon-user-female icons font-2xl  mt-4" id="us" title="us"></i>#}
+{#                              {% elif user.user_gender %}#}
+{#                                <i class="icon-user icons font-2xl  mt-4" id="us" title="us"></i>#}
+{#                              {% else %}#}
+{#                                  {{ user.user_gender }}#}
+{#                              {% endif %}#}
+{##}
+{#                          </td>#}
+{#                          <td>#}
+{#                            <div class="clearfix">#}
+{#                              <div class="float-left">#}
+{#                                <strong>50%</strong>#}
+{#                              </div>#}
+{#                              <div class="float-right">#}
+{#                                <small class="text-muted">Jun 11, 2015 - Jul 10, 2015</small>#}
+{#                              </div>#}
+{#                            </div>#}
+{#                            <div class="progress progress-xs">#}
+{#                              <div class="progress-bar bg-danger" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>#}
+{#                            </div>#}
+{#                          </td>#}
+{#                          <td>{{ user.email }}</td>#}
+{#                          <td>{{ user.user_no }}</td>#}
+{#                          <td class="text-center">#}
+{#                            <i class="fa fa-cc-mastercard" style="font-size:24px"></i>#}
+{#                          </td>#}
+{#                          <td>#}
+{#                            <div class="small text-muted">最后登录时间</div>#}
+{#                            <strong>{{ user.Last_login }}</strong>#}
+{#                          </td>#}
+{#                          <td>#}
+{#                            <button class="btn btn-sm btn-primary" type="button" data-whatever="@mdo" onclick="updateData(1)"><i class="fa fa-edit fa-lg"></i>&nbsp;修改</button>#}
+{#                            <button class="btn btn-sm btn-danger" type="button" onclick="deleteData(1)"><i class="fa fa-close fa-lg "></i>&nbsp;删除</button>#}
+{#                          </td>#}
+{#                        </tr>#}
+{#                        {% endfor %}#}
+{##}
+{##}
+{#                      </tbody>#}
+{#                    </table>#}
 
-                      <thead class="">
-                        <tr>
-                          <th class="text-center">
-                            <i class="icon-people"></i>
-                          </th>
-                          <th>用户名</th>
-                          <th class="text-center">性别</th>
-                          <th>资料完善度</th>
-                          <th>邮箱</th>
-                          <th>编号</th>
-                          <th class="text-center">方式</th>
-                          <th>活跃</th>
-                          <th>操作</th>
-                        </tr>
-                      </thead>
-                      <tbody id="grid">
-                        {% for user in userlist %}
-                        <tr>
-                          <td class="text-center">
-                            <div class="avatar">
-                              <img class="img-avatar" src="{{ url_for('static', filename=user.icon) }}" alt="admin@bootstrapmaster.com">
-                              <span class="avatar-status badge-success"></span>
-                            </div>
-                          </td>
-                          <td>
-                            <div>{{ user.user_name }}</div>
-                            <div class="small text-muted">
-                              <span>{{ user.login_account  }}</span> | 注册时间:
-
-                                {{ user.operate_time  }}</div>
-                          </td>
-                          <td class="text-center">
-
-                              {% if user.user_gender and user.user_gender == 1  %}
-                                <i class="icon-user-female icons font-2xl  mt-4" id="us" title="us"></i>
-                              {% elif user.user_gender %}
-                                <i class="icon-user icons font-2xl  mt-4" id="us" title="us"></i>
-                              {% else %}
-                                  {{ user.user_gender }}
-                              {% endif %}
-
-                          </td>
-                          <td>
-                            <div class="clearfix">
-                              <div class="float-left">
-                                <strong>50%</strong>
-                              </div>
-                              <div class="float-right">
-                                <small class="text-muted">Jun 11, 2015 - Jul 10, 2015</small>
-                              </div>
-                            </div>
-                            <div class="progress progress-xs">
-                              <div class="progress-bar bg-danger" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-                            </div>
-                          </td>
-                          <td>{{ user.email }}</td>
-                          <td>{{ user.user_no }}</td>
-                          <td class="text-center">
-                            <i class="fa fa-cc-mastercard" style="font-size:24px"></i>
-                          </td>
-                          <td>
-                            <div class="small text-muted">最后登录时间</div>
-                            <strong>{{ user.Last_login }}</strong>
-                          </td>
-                          <td>
-                            <button class="btn btn-sm btn-primary" type="button" data-whatever="@mdo" onclick="updateData(1)"><i class="fa fa-edit fa-lg"></i>&nbsp;修改</button>
-                            <button class="btn btn-sm btn-danger" type="button" onclick="deleteData(1)"><i class="fa fa-close fa-lg "></i>&nbsp;删除</button>
-                          </td>
-                        </tr>
-                        {% endfor %}
 
 
-                      </tbody>
-                    </table>
 
                     </div>
 
-                  <!-- 分页 -->
-                   <div>
-                    <ul class="pagination justify-content-center">
-                      <li class="page-item">
-                        <a class="page-link" href="#">Prev</a>
-                      </li>
-                      <li class="page-item">
-                        <a class="page-link" href="#">1</a>
-                      </li>
-                      <li class="page-item">
-                        <a class="page-link" href="#">2</a>
-                      </li>
-                      <li class="page-item active">
-                        <a class="page-link" href="#">3</a>
-                      </li>
-                      <li class="page-item">
-                        <a class="page-link" href="#">4</a>
-                      </li>
-                      <li class="page-item">
-                        <a class="page-link" href="#">Next</a>
-                      </li>
-                    </ul>
-                  </div>
+
+
+
+
                   </div>
                 </div>
              </div>
@@ -341,13 +327,33 @@
 
 
 
-          <div id="div_demo"></div>
+
+
+
+
+<script id="gridtable" type="text/x-jquery-tmpl">
+
 {% raw %}
+            <table class="table table-responsive-sm table-striped">
 
+                      <thead class="">
+                        <tr>
+                          <th class="text-center">
+                            <i class="icon-people"></i>
+                          </th>
+                          <th>用户名</th>
+                          <th class="text-center">性别</th>
+                          <th>资料完善度</th>
+                          <th>邮箱</th>
+                          <th>编号</th>
+                          <th class="text-center">方式</th>
+                          <th>活跃</th>
+                          <th>操作</th>
+                        </tr>
+                      </thead>
+                      <tbody >
 
-<script id="demo" type="text/x-jquery-tmpl">
-
-
+                        {{each(i,user) items}}
                         <tr>
                           <td class="text-center">
                             <div class="avatar">
@@ -360,13 +366,12 @@
                             <div class="small text-muted">
                               <span>${login_account}</span> | 注册时间:
 
-                                ${operate_time}</div>
+                                </div>
                           </td>
                           <td class="text-center">
 
                              {{if user_gender == 1}}
                                 <i class="icon-user-female icons font-2xl  mt-4" id="us" title="us"></i>
-
 
                               {{else}}
                                   <i class="icon-user icons font-2xl  mt-4" id="us" title="us"></i>
@@ -401,14 +406,20 @@
                           </td>
                         </tr>
 
+                        {{/each}}
 
+                         </tbody>
+                    </table>
 
+        {% endraw %}
 
+                  <!-- 分页 -->
+                  {{ pagination.pagination() }}
 
 
 
 </script>
-{% endraw %}
+
 
 
 
@@ -457,19 +468,28 @@
 
 
 
+    page(1)
 
-    $.ajax({
+
+
+    /**
+     * 翻页
+     * @param page
+     */
+    function page(page,param){
+
+        $.ajax({
             url:'{{ url_for('api.users') }}',
             type:'get',
-            data: {'appid':1},
+            data: {page:page},
             success:function(data){
-                console.log(data)
 
-                $("#demo").tmpl(data.data).appendTo('#grid');
+                $("#grid").empty();
+                $("#gridtable").tmpl(data).appendTo('#grid');
             }
         });
 
-　　
+    }
 
 
 
